AB#233238: Added margin to prevent animation overlapping

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/flexible-framer/_flexible-framer.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/flexible-framer/_flexible-framer.scss
@@ -189,6 +189,7 @@
   & .grid__item {
     display: flex;
     flex-flow: column;
+    margin-top: 1.5rem;
 
     @include medium {
       flex: 1 1 50%;
